- added core_config fields options - added module.deploy-envs - forms: using getHtmlSelectOptionNoValue() - changed to preferred quote `'` instead of `"` - declared missing types - cleaned up code - module description

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "aklebe-laravel/website-base-module",
   "type": "laravel-module",
-  "description": "",
+  "description": "Website module with a bunch of functionalities for a multi store website.",
   "authors": [
     {
       "name": "Andreas Klebe",
